# nm-debug-logs

./: Cargo.toml  Dockerfile.armv7hf  Dockerfile.template  README.md  collector.service  collector.sh  installer.sh
src/: args.rs  check.rs  errors.rs  logger.rs  lookup.rs  main.rs  watch.rs
