[package]
name = "netdiag"
version = "0.1.0"
authors = ["majorz"]

[dependencies]
log = "0.4"
env_logger = "0.5"
serde = "1.0"
serde_derive = "1.0"
tokio-ping = "0.2"
tokio = "0.1"
futures = "0.1"
reqwest = "0.9"
systemd = "0.3"
bincode = "1.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.clap]
version = "2.32"
default-features = false

[dependencies.failure]
version = "0.1"
default-features = false

[dependencies.trust-dns-resolver]
version = "0.10"
default-features = false
